# cosmic-applet-package-updater

./: .plan.md  CHANGES.md  CLAUDE.md  Cargo.toml  FINAL_SUMMARY.md  INSTALL.md  NIX-BUILD-SOLUTION.md  NIXOS-QUICK-START.md  PERFORMANCE.md  POLKIT.md  README-NIXOS.md  README.md  REVIEW_SUMMARY.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  VERSION_1.2.0_SUMMARY.md  VIRTUALIZATION.md  default.nix  example-nixos-config.nix  flake.nix  justfile  package-lock.json  shell.nix
.github/workflows/: README.md  ci.yml  release.yml
package-updater/: Cargo.toml
package-updater/src/: app.rs  config.rs  main.rs  package_manager.rs  paths.rs  polkit.rs  virtualized_list.rs
policy/: com.github.cosmic-ext.package-updater.policy
res/: com.github.cosmic_ext.PackageUpdater.desktop  com.github.cosmic_ext.PackageUpdater.metainfo.xml
